--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <body>
         <h1>The Image Gallery</h1>
         <div class="gallery">
-            <a href="files/images/img (2).jpg"><img src="files/images/img (2).jpg" ></a>
-            <a href="files/images/img (1).jpg"><img src="files/images/img (1).jpg" ></a>
-            <a href="files/images/img (3).jpg"><img src="files/images/img (3).jpg" ></a>
-            <a href="files/images/img (4).jpg"><img src="files/images/img (4).jpg" ></a>
-            <a href="files/images/img (5).jpg"><img src="files/images/img (5).jpg" ></a>
-            <a href="files/images/img (6).jpg"><img src="files/images/img (6).jpg" ></a>
-            <a href="files/images/img (7).jpg"><img src="files/images/img (7).jpg" ></a>
-            <a href="files/images/img (8).jpg"><img src="files/images/img (8).jpg" ></a>
-            <a href="files/images/img (9).jpg"><img src="files/images/img (9).jpg" ></a>
-            <a href="files/images/img (10).jpg"><img src="files/images/img (10).jpg" ></a>
-            <a href="files/images/img (11).jpg"><img src="files/images/img (11).jpg" ></a>
-            <a href="files/images/img (12).jpg"><img src="files/images/img (12).jpg" ></a>
-            <a href="files/images/img (13).jpg"><img src="files/images/img (13).jpg" ></a>
+            <a href="files/images/img (2).jpg"><img src="files/images/img (2)_tn.jpg" ></a>
+            <a href="files/images/img (1).jpg"><img src="files/images/img (1)_tn.jpg" ></a>
+            <a href="files/images/img (3).jpg"><img src="files/images/img (3)_tn.jpg" ></a>
+            <a href="files/images/img (4).jpg"><img src="files/images/img (4)_tn.jpg" ></a>
+            <a href="files/images/img (5).jpg"><img src="files/images/img (5)_tn.jpg" ></a>
+            <a href="files/images/img (6).jpg"><img src="files/images/img (6)_tn.jpg" ></a>
+            <a href="files/images/img (7).jpg"><img src="files/images/img (7)_tn.jpg" ></a>
+            <a href="files/images/img (8).jpg"><img src="files/images/img (8)_tn.jpg" ></a>
+            <a href="files/images/img (9).jpg"><img src="files/images/img (9)_tn.jpg" ></a>
+            <a href="files/images/img (10).jpg"><img src="files/images/img (10)_tn.jpg" ></a>
+            <a href="files/images/img (11).jpg"><img src="files/images/img (11)_tn.jpg" ></a>
+            <a href="files/images/img (12).jpg"><img src="files/images/img (12)_tn.jpg" ></a>
+            <a href="files/images/img (13).jpg"><img src="files/images/img (13)_tn.jpg" ></a>
         </div>
     </body>
 </html>
