--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>The Image Gallery</title>
         <link rel="stylesheet" type="text/css" href="files/css/style.css">
+        <link rel="javascript" href="files/js/jquery-3.4.1.min.js">
     </head>
     <body>
         <h1>The Image Gallery</h1>
