--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
             <a href="files/images/img (12).jpg"><img src="files/images/thumbs/img (12)_tn.jpg" ></a>
             <a href="files/images/img (13).jpg"><img src="files/images/thumbs/img (13)_tn.jpg" ></a>
             <script>
-            $(window).on('load', function() { // makes sure the whole site is loaded 
-                $('#status').fadeOut(); // will first fade out the loading animation 
+            setTimeout(function() { // makes sure the whole site is loaded 
+                $('#status').delay(200).fadeOut(); // will first fade out the loading animation 
                 $('#preloader').delay(350).fadeOut('slow'); // will fade out the white DIV that covers the website. 
-                $('body').delay(10000).css({'overflow':'visible'});
-              });
+                $('body').delay(350).css({'overflow':'visible'});
+              },2000);
+              
             </script>
         </div>
     </body>
