--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>The Image Gallery</title>
         <link rel="stylesheet" type="text/css" href="files/css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300&display=swap" rel="stylesheet">
         <script src="files/js/jquery-3.4.1.min.js"></script>
     </head>
     <body>
